# ChessEngine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: project.yml
scripts/: CMakeLists.txt  start-client-server.sh  valgrind_test
src/Client/: CMakeLists.txt  Client.cpp  Client.hpp  MsgHandler.cpp  MsgHandler.hpp
src/ClientStarter/: CMakeLists.txt  ClientStarter.cpp
src/EngineServer/: ActionHandler.cpp  ActionHandler.hpp  CMakeLists.txt  ConnectionHandler.hpp  EngineServer.cpp  EngineServer.hpp  MsgCreator.cpp  MsgCreator.hpp  MsgHandler.cpp  MsgHandler.hpp
src/EngineStarter/: CMakeLists.txt  EngineStarter.cpp  main.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp
src/Message/: CMakeLists.txt  Message.cpp  Message.hpp  MsgInfoIfc.hpp  MsgTypes.cpp  MsgTypes.hpp
src/MessageHandler/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.hpp
src/Session/: CMakeLists.txt  Session.cpp  Session.hpp
src/User/: CMakeLists.txt  User.cpp  User.hpp
src/WindowManager/: CMakeLists.txt  WindowManager.cpp  WindowManager.hpp
tests/: CMakeLists.txt
tests/ClientTest/: ClientMsgHandlerTest.cpp  ClientTest.cpp
tests/EngineServerTest/: EngineServerTest.cpp  MockActionHandler.hpp  MsgHandlerTest.cpp
tests/EngineStarterTest/: CMakeLists.txt  EngineStarterTest.cpp
tests/Message/: MessageTest.cpp  MsgTypesTest.cpp
tests/Session/: SessionTest.cpp
tests/User/: UserTest.cpp
tests/WindowManager/: WindowManagerTest.cpp
